- doc for search method
